alignment corrected

--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,6 @@
 .App {
   text-align: center;
   color: rgba(245, 245, 245, 0.821);
-  /* display: flex;
-  flex-direction: column; */
-  /* overflow: scroll; */
 }
 
 body {
@@ -37,15 +34,7 @@ code {
   grid-template-rows: repeat(10, 9vh);
   gap: 0.75vh;
   position: absolute;
-  top: 15%;
 }
-
-/* .navContainer{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding-top: 40px;
-} */
 
 .nav{
   /* border: solid; */
@@ -55,7 +44,6 @@ code {
   position: absolute;
   width: 180vh;
   font-size: 18px;
-  /* top: 0; */
 }
 
 /* .nav h1{
@@ -114,6 +102,7 @@ background: linear-gradient(to top, deepskyblue 0%, darkorchid 70%);
 
 .basicInfoBox{
   /* border: solid blue; */
+  font-size: 2.5vh;
   display: grid;
   grid-column: 3 / span 4;
   grid-row: 3 / span 3;
